# ChangeLog for gnome-extra/nm-applet
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/nm-applet/ChangeLog,v 1.20 2008/08/17 16:15:22 maekke Exp $

  02 Nov 2008; Frédéric Lietart <thelinuxfr@free.fr>
  +nm-applet-9999.ebuild:
  Import from #235330

  04 Oct 2008; Frédéric Lietart <thelinuxfr@free.fr> ChangeLog:
  Upstream SVN version 7.0

  17 Aug 2008; Markus Meier <maekke@gentoo.org> nm-applet-0.6.6.ebuild:
  x86 stable, bug #228837

  28 Jul 2008; Kenneth Prugh <ken69267@gentoo.org> nm-applet-0.6.6.ebuild:
  amd64 stable, bug #228837. Removed unused autotools inherit.

  26 Jun 2008; Robert Buchholz <rbu@gentoo.org>
  -nm-applet-0.6.5_p20080208.ebuild, nm-applet-0.6.6.ebuild:
  Readd ~ppc which was dropped due to >=hal-0.5.10 dependency, and remove old
  version.

*nm-applet-0.6.6 (07 Mar 2008)

  07 Mar 2008; Steev Klimaszewski <steev@gentoo.org> -files/10-po_fr.patch,
  -files/12-po_jp.patch, -files/nm-applet-makefile.am-2.patch,
  -files/11-po_de.patch, -files/nm-applet-po-linguas.patch,
  -files/nm-applet-potfiles.patch, -files/nm-editor-fdo-categories.patch,
  -nm-applet-0.6.5.98.ebuild, +nm-applet-0.6.6.ebuild:
  New upstream release, remove the old patches that 0.6.5.98 were using.

*nm-applet-0.6.5.98 (14 Feb 2008)

  14 Feb 2008; Steev Klimaszewski <steev@gentoo.org>
  +files/nm-applet-makefile.am-2.patch, +files/10-po_fr.patch,
  +files/11-po_de.patch, +files/12-po_jp.patch,
  +files/nm-applet-po-linguas.patch, +files/nm-applet-potfiles.patch,
  +files/nm-editor-fdo-categories.patch, +nm-applet-0.6.5.98.ebuild:
  Add 0.6.5.98 (aka 0.6.6rc1) from upstream and some patches from Debian to
  use po/LINGUAS, updated translations, and fix a few other misc. issues.

*nm-applet-0.6.5_p20080208 (10 Feb 2008)

  10 Feb 2008; Steev Klimaszewski <steev@gentoo.org>
  -nm-applet-0.6.5_p20080131.ebuild, +nm-applet-0.6.5_p20080208.ebuild:
  Bump nm-applet snapshot
