@@ -1,7 +1,9 @@
 AUX nm-applet-0.6.5-confchanges.patch 978 RMD160 4e506d4653affb6d01902c40100ebb2cffd122b8 SHA1 e9088c5767d5e9598b99dae84ad88023f1746262 SHA256 716d2c6abbc010d0fe42916a279b18262d97cc37e955f04c47b7ca27c8786fec
 AUX nm-applet-changeconf.patch 744 RMD160 b8af24f321d60622a9261069de4345614ccb4ad7 SHA1 13f25342c0902252731fcb0b0b92f3c23d10d0f0 SHA256 4b2c353ebe35f11e8d54d99c76b1c9c44b8acebe257b038c38c55e7f8a01df3d
+DIST network-manager-applet-0.7.0-rc1.tar.gz 1091062 RMD160 4dcae8bccd9cf124316468f36f69a5df79c0d624 SHA1 e7c5eee5cdd7989e3486eb7970da4aae828a374e SHA256 37085b2bd3733ebb9735418b8151cb109fd45653402dddeb71c61130bd07a8fe
 DIST nm-applet-20081006.tar.gz 1378701 RMD160 43abc21f0f7fb8f2ef327bf36f9e7db949303cdc SHA1 03bd71bf8df0a7974f95592648721c3cc6411d3e SHA256 a78f71f7d46da633a436fabde4efade6eefab67a7afa3a2eb8c8131fec99dbb2
+EBUILD nm-applet-0.7.0_rc1.ebuild 1743 RMD160 f9011047c24d009fd4ca522f3c3d60067c2929ac SHA1 946a8e77031c9fb1c5782985a39d22eb1271ef07 SHA256 527e3e1eca42e8c3e17fdeb63a139bb34c524c17cdaad51a7b418fb0697d176b
 EBUILD nm-applet-20081006.ebuild 1681 RMD160 f0dbe1be0d46a89c4a8ecafb357cd8903d1bad4f SHA1 b864a78edb6d864353ea6e56e82ea7b7117baad5 SHA256 d2b596c0bfd22c943f8dabfd270c479ce4fcf272d061b60263ff8394e7762656
 EBUILD nm-applet-9999.ebuild 1768 RMD160 5027a47e8be1c892a50ca97bbd2306429f1bc286 SHA1 5836c8f39df93fe4ee486a56842eb9f5e78bace3 SHA256 2f16140ee7e3af498a316f08be87e37904915cffed11d2570435ea0666b15e63
-MISC ChangeLog 4067 RMD160 5c74e5703088f5d27718bc4cbff37c4c5d57946a SHA1 9b635c540a1b7365717c9d6f44230c22ca4ab912 SHA256 0b2bb86789dd1c1ed819efbaaaae75c3cf768a62b168638c615239e378cf555b
+MISC ChangeLog 4178 RMD160 d25dd2f8c90e2417de92970a55bcee0b19a7d2a7 SHA1 6c88cc2c042ae69e85b5f3a94afa4272e2c20fae SHA256 4bc1060d422fc9fe0a3fde776f68d3790de9a25ce6608b8344af7030740535be
 MISC metadata.xml 260 RMD160 3bd2ac88342783f1ced38fe5de95da8d94db7c1c SHA1 7bcafc6b129a5890b55be1edf868f2e8751e7307 SHA256 94e8a0c83eb641ff321069cd9c7ee00744ffecb329ff14dc3a76773a8d2e228c
