@@ -1,7 +1,9 @@
 AUX NetworkManager.conf.patch 1485 RMD160 e39a794afe4bc2adb254933d01431b498aca19f3 SHA1 683b92be7864c11d64f739315d0577e54d4f77af SHA256 d658a1d0174471f6f2538cbe7f927d587b142a4ccab28ce52bc5455a179a9d31
 AUX NetworkManagerDispatcher 1198 RMD160 4345870ab40607b9aed80c8da383b604f032b98e SHA1 1dd2250c746b25566fceaab551f4ef8335fe4f55 SHA256 f8cb5d0470619cf1f0812fffcf1bf2091e3c44a757899c07164f80ddd6a2641e
+DIST NetworkManager-0.7.0-rc1.tar.gz 1463205 RMD160 d3bb5d7a97f47b9e73d454c445ec0d42410f43a3 SHA1 6444211b1dd1461f3fc652ea210078ba56d4211a SHA256 5b1d2bebdf3fec65a053752e18b09c128183cfa8d3e9aa54ddcd64310d9d0105
 DIST NetworkManager-20081006.tar.gz 2491287 RMD160 07d596845c674be71bc22e023d589f88d084dea7 SHA1 d7fc909e7dd0fb9d4f08328fcb7b1ac06be6b3d5 SHA256 20bff1282f014bc2b89ff327f654c7420b8b6a502c662c79de87f42afd799430
+EBUILD networkmanager-0.7.0_rc1.ebuild 2367 RMD160 91f8fd05f461ec32cdbcd9974d3e83976bda6b7a SHA1 abb8c8c1e5f7b0bd3cd41439421d5856fbabe5bf SHA256 4ecab44fc79df1fcd8cc9ca4bc4d275a1759bba7f6c373559fc65bc3f62ea9b7
 EBUILD networkmanager-20081006.ebuild 2290 RMD160 51a1788dffde7fa5b4e0bf110d9bc752763efbed SHA1 3d57e8e2d8f22224cb1d58c057b4782ba89921b8 SHA256 a1a2766b9425e349f0f3f7f3fcbf51c937d835f59d9841c0496a9efe2bcb0078
 EBUILD networkmanager-9999.ebuild 2379 RMD160 326a024f5c49e7f1d2a4ea40c84a31360c216a6c SHA1 73cedc2b21dbcd20ba7126c7c86789a2a1186ed1 SHA256 0e245c89c369581caeb8a7441b00984dffdd12bdcc99c262d882be9b9a405f4c
-MISC ChangeLog 7862 RMD160 e7af53be56cd4c890e5f4a2882aae6ccdfe6a9aa SHA1 bed57c46465cee0935bd65aced67c9002221d8cc SHA256 9edfaf17447c66916d42246d6e203a3ef485784a3bfce1365d66cf61a048f42f
+MISC ChangeLog 7978 RMD160 17f0d979063314dfa82134ac632aa4a4742490b6 SHA1 dd61171734c8bb050605f574c422a641e5fa0f6f SHA256 41f4d089a7fc2a8c56362e0289109b9f289d92017e3507bcc084779acb1fb8d5
 MISC metadata.xml 352 RMD160 dc1d33b6866b7a51fd60cc8508668cb80ccdf797 SHA1 401add51065c746c71da8b5992874c0556cedc04 SHA256 c5b303e6d5dbe90d34284c51a1c7ea8015e87c41d6f63446a1bf7ba5daf0d26d
