@@ -1,0 +1,94 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+inherit gnome2 eutils
+
+# NetworkManager likes itself with capital letters
+MY_P=${PN/networkmanager/NetworkManager}
+MY_PV=${PV/_rc/-rc}
+
+DESCRIPTION="Network configuration and management in an easy way. Desktop environment independent."
+HOMEPAGE="http://www.gnome.org/projects/NetworkManager/"
+SRC_URI="http://ftp.gnome.org/pub/GNOME/sources/NetworkManager/0.7/${MY_P}-${MY_PV}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="amd64 ~ppc x86"
+IUSE="crypt doc gnome"
+
+
+RDEPEND=">=sys-apps/dbus-0.60
+	>=sys-apps/hal-0.5.10
+	sys-apps/iproute2
+	>=dev-libs/libnl-1.1
+	>=net-misc/dhcdbd-1.4
+	>=net-wireless/wireless-tools-28_pre9
+	>=net-wireless/wpa_supplicant-0.4.8
+	>=dev-libs/glib-2.8
+	net-libs/telepathy-glib
+	>=sys-auth/policykit-0.9
+	gnome? ( >=x11-libs/gtk+-2.8
+		>=gnome-base/libglade-2
+		>=gnome-base/gnome-keyring-0.4
+		>=gnome-base/gnome-panel-2
+		>=gnome-base/gconf-2
+		>=gnome-base/libgnomeui-2
+		>=gnome-extra/policykit-0.9
+		)
+	crypt? ( dev-libs/libgcrypt )"
+DEPEND="${RDEPEND}
+	dev-util/pkgconfig
+	dev-util/intltool
+	dev-util/gtk-doc"
+PDEPEND="gnome? ( >gnome-extra/nm-applet-20081005 )"
+
+DOCS="AUTHORS ChangeLog NEWS README"
+USE_DESTDIR="1"
+
+G2CONF="${G2CONF} \
+	`use_with crypt gcrypt` \
+	`use_with gnome` \
+	--disable-more-warnings \
+	--localstatedir=/var \
+	--with-distro=gentoo \
+	--with-dbus-sys=/etc/dbus-1/system.d"
+
+S=${WORKDIR}/${MY_P}-0.7.0
+
+pkg_setup() {
+	if built_with_use sys-apps/iproute2 minimal ; then
+		eerror "Please rebuild sys-apps/iproute2 without the minimal useflag."
+		die "Fix iproute2 first."
+	fi
+}
+
+src_unpack () {
+	unpack ${A}
+	cd "${S}"
+	epatch "${FILESDIR}/NetworkManager.conf.patch"
+}
+
+src_compile(){
+	econf || die "configure failed"
+	emake || die "make failed"
+}
+
+src_install() {
+	gnome2_src_install
+	# Need to keep the /var/run/NetworkManager directory
+	keepdir /var/run/NetworkManager
+}
+
+pkg_postinst() {
+	gnome2_icon_cache_update
+	elog "You need to be in the plugdev group in order to use NetworkManager"
+	elog "Problems with your hostname getting changed?"
+	elog ""
+	elog "Add the following to /etc/dhcp/dhclient.conf"
+	elog 'send host-name "YOURHOSTNAME";'
+	elog 'supersede host-name "YOURHOSTNAME";'
+
+	elog "You will need to restart DBUS if this is your first time"
+	elog "installing NetworkManager."
+}
