@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/net-misc/networkmanager/ChangeLog,v 1.33 2008/08/17 16:16:38 maekke Exp $
 
+  04 Nov 2008; Frédéric Lietart <thelinuxfr@free.fr>
+  +networkmanager-0.7.0_rc1.ebuild:
+  New release candidate
+
   02 Nov 2008; Frédéric Lietart <thelinuxfr@free.fr>
   +networkmanager-9999.ebuild:
   Import ebuild from #235330
